--- a/.github/workflows/twitter-together.yml
+++ b/.github/workflows/twitter-together.yml
@@ -1,4 +1,6 @@
-on: [push, pull_request]
+"on":
+  - push
+  - pull_request
 name: Twitter, together!
 jobs:
   preview:
@@ -15,7 +17,7 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
       - name: checkout master
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Tweet
         uses: gr2m/twitter-together@v1.x
         env:
